Tidy some template display issues (#64)
* Make control display box the right size

* Don't render PageOverflow for controls if it's empty

* Only render choices on main devices

* Simpler fix for hiding choices scrollbar on main and aux

* Tidy PageOverflow css, increment version number

--- a/src/components/choices/Choices.scss
+++ b/src/components/choices/Choices.scss
@@ -3,7 +3,7 @@
 @import '~theme';
 
 .choices {
-  overflow-x: scroll;
+  overflow-x: auto;
   overflow-y: hidden;
   white-space: nowrap;
   position: relative;
@@ -27,6 +27,6 @@
   //   width: 2 * $gel-spacing-unit;
   //   height: 100%;
   //   background: $theme-color-black;
-  //   background: linear-gradient(90deg, rgba($theme-color-black, 0) 0, rgba($theme-color-black, 1) 100%); 
+  //   background: linear-gradient(90deg, rgba($theme-color-black, 0) 0, rgba($theme-color-black, 1) 100%);
   // }
 }
