--- a/src/components/page-overflow/PageOverflow.scss
+++ b/src/components/page-overflow/PageOverflow.scss
@@ -5,11 +5,8 @@
 .page-overflow {
   background-color: $theme-color-white;
   color: $theme-color-black;
-  border-radius: $gel-spacing-unit $gel-spacing-unit 0 0;
+  border-radius: $gel-spacing-unit;
   padding: $gel-spacing-unit;
-  margin-top: 4*$gel-spacing-unit;
-
-  // TODO remove; only used to simulate more content.
-  min-height: 100%;
+  margin-top: 2*$gel-spacing-unit;
+  margin-bottom: 2*$gel-spacing-unit;
 }
-
